# skittles

./: Cargo.toml  README.md  appveyor.yml  circle.yml
src/: lib.rs
tests/: skittles.rs
